# sendgrid-manage-teammates

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: roles.json  users.json
src/: main.py  roles.py
src/helpers/: teammate.py
src/models/: teammate.py
